@@ -1,6 +1,9 @@
 devel
 -----
 
+* Add `--shard` option to arangodump, so that dumps can be restrict to one or
+  multiple shards only.
+
 * Updated OpenSSL to 1.1.1j and OpenLDAP to 2.4.57.
 
 * Added logging of elapsed time of ArangoSearch commit/consolidation/cleanup 
